src-tauri/tests/snapshots/pipeline_scenarios__codex_file_change_empty_changes.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: tool-call
      tool_name: apply_patch
      tool_call_id: codex-patch-fc4
      args_keys:
        - changes
      args_text_length: 14
      has_result: true
      result_kind: string
      result_preview: Patch applied
      streaming_status: ~
  status:
    type: complete
    reason: stop
  streaming: ~
