src-tauri/tests/snapshots/pipeline_scenarios__codex_image_generation_renders_as_image.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: image
      kind: base64
      media_type: image/png
  status:
    type: complete
    reason: stop
  streaming: ~
