src-tauri/tests/snapshots/pipeline_scenarios__codex_item_command_execution_failed_includes_exit_code.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: c2
  content_length: 1
  content:
    - type: tool-call
      tool_name: Bash
      tool_call_id: codex-cmd-c2
      args_keys:
        - command
      args_text_length: 19
      has_result: true
      result_kind: string
      result_preview: "Exit code: 1\nstderr line"
      streaming_status: ~
  status:
    type: complete
    reason: stop
  streaming: ~
