src-tauri/tests/snapshots/pipeline_scenarios__codex_item_command_execution_legacy_output_field.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: c3
  content_length: 1
  content:
    - type: tool-call
      tool_name: Bash
      tool_call_id: codex-cmd-c3
      args_keys:
        - command
      args_text_length: 24
      has_result: true
      result_kind: string
      result_preview: hello
      streaming_status: ~
  status:
    type: complete
    reason: stop
  streaming: ~
