src-tauri/tests/snapshots/pipeline_scenarios__codex_item_command_execution_renders_as_bash_tool_call.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: c1
  content_length: 1
  content:
    - type: tool-call
      tool_name: Bash
      tool_call_id: codex-cmd-c1
      args_keys:
        - command
      args_text_length: 20
      has_result: true
      result_kind: string
      result_preview: "total 4\n.\n..\nREADME.md"
      streaming_status: ~
  status:
    type: complete
    reason: stop
  streaming: ~
