src-tauri/tests/snapshots/pipeline_scenarios__codex_legacy_turn_dot_completed_still_works.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: system
  id: msg-1
  content_length: 1
  content:
    - type: text
      text: 3.0s
  status: ~
  streaming: ~
